--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,164 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+ 
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
+  }
+ 
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+  }
+}
+ 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components{
+
+  /* RTEdior styles */
+  .RichEditor-default , .data > p{
+    @apply  text-base;
+}
+
+  .RichEditor-blockquote, .data blockquote{
+    @apply text-gray-600/80 dark:text-gray-400/80 bg-gray-400/20 dark:bg-gray-400/10 font-serif italic  border-l-2 border-gray-400/80 px-1 py-3;
+  }
+  .RichEditor-codeblock , .data pre{
+    @apply p-2 text-sm bg-popover-foreground/90 text-popover ;
+  }
+  div .RichEditor-codeblock, .data pre{
+    @apply first:rounded-t-md last:rounded-b-md first:mt-3 last:mb-3;
+  }
+
+
+  .RichEditor-h1 , .data h1{
+    @apply text-4xl font-bold my-2;
+  }
+  .RichEditor-h2 , .data h2{
+    @apply text-3xl font-bold my-2;
+  }
+  .RichEditor-h3 , .data h3{
+    @apply text-2xl font-bold my-2;
+    
+  }
+  .RichEditor-h4 , .data h4{
+    @apply text-xl font-bold my-2;
+    
+  } 
+  .RichEditor-h5 , .data h5{
+    @apply text-lg font-bold my-2;
+    
+  }
+  .RichEditor-h6 , .data h6{
+    @apply text-base font-bold my-2; 
+  }
+
+  .RichEditor-link{
+    @apply underline
+  }
+
+  .data ol{
+    @apply list-inside list-decimal;
+  }
+  .data ol  ol, .richE{
+    @apply ml-7;
+  }
+  /* LISTS STYLES */
+  .data ul > ul{
+    list-style-type:circle;
+    list-style-position: inside;
+    margin-left: 1.75rem;
+  }
+  .data ul > ul > ul{
+    list-style-type: square;
+  }
+  .data ol > ol{
+    list-style-type:lower-alpha;
+  }
+  .data ol > ol > ol{
+    list-style-type:lower-roman;
+  }
+
+  .data ul{
+    @apply list-inside list-disc
+  }
+
+  .data a , .a_link{
+    @apply underline  text-violet-500 cursor-pointer;
+  }
+  .data{
+    @apply leading-relaxed;
+  }
+  .data *{
+    @apply my-2;
+  }
+  .RTEImageContainer{
+    @apply my-3;
+  }
+  .maxHeightSize{
+    @apply max-h-[500px]
+  }
+ 
 }
