--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,9 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
+    --codeBackground: 220, 13%, 18%;
+    --codeForeground: 210 40% 98%;
+
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
  
@@ -33,8 +36,6 @@
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
-
-
 
   }
  
@@ -93,10 +94,16 @@
     @apply text-gray-600/80 dark:text-gray-400/80 bg-gray-400/20 dark:bg-gray-400/10 font-serif italic border-l-[3px] border-gray-400/80 px-1 py-3 pl-2 my-3;
   }
   .RichEditor-codeblock ,.data pre{
-    @apply p-2 text-sm bg-popover-foreground/90  text-popover/80 font-mono overflow-x-auto;
+    @apply p-2 text-sm overflow-x-auto font-mono;
   }
   /* data uses syntax highlight no need for some of editor */
-
+  .RichEditor-codeblock{
+    @apply text-popover/80 font-mono bg-popover-foreground/90 ;
+  }
+  /* render only dark mode code */
+  .data pre{
+    @apply bg-codeBackground text-codeForeground;
+  }
 
   
   .RichEditor-codeblock div{
@@ -116,7 +123,7 @@
   .RichEditor-codeblock:not(:has(+ .RichEditor-codeblock))
   , .data pre:not(:has(+ pre))
   {
-    @apply rounded-b-md;
+    @apply rounded-b-md shadow-md shadow-black/50;
   }
   /* disable rounded in between  */
   .RichEditor-codeblock + .RichEditor-codeblock:has(+ .RichEditor-codeblock)
@@ -157,11 +164,20 @@
   .data ol{
     @apply list-inside list-decimal;
   }
+  /* markers opacity dim */
+  .data ol li::marker, .data ul li::marker, .RichEditor-default::marker{
+    @apply text-foreground/60;
+  }
+
+  /* for spacing */
   .data ol li::before{
     content: counter(li);
     height: 100%;
     width: 1rem;
     opacity: 0;
+  }
+  .data ol li, .data ul li{
+    @apply pt-1;
   }
 
   .data ol  ol{
@@ -215,6 +231,9 @@
 .RichEditor-default{
   @apply select-text;
 }
+.data code, .CODE{
+  @apply bg-foreground/10 text-popover-foreground px-2 rounded-md opacity-70;
+}
 
   
 
@@ -225,3 +244,4 @@
   user-select: text !important;
 
 }
+
